# TinyRenderer

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  file.ixx  geometry.ixx  io.ixx  main.cpp  main_dx12.cpp  main_ogl.cpp  math.ixx  matrix.ixx  model.ixx  scene.ixx  shader.ixx  test_ogl.cpp  tiny_render.ixx
src/graphicsAPIdemo/: graphicsAPIdemo.cmake  test_ogl.cpp
src/shaders/: shader.vs
